[project]
name = "content-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamas Pap",email = "tamas@tamaspap.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openai (>=1.78.0,<2.0.0)",
    "result (>=0.17.0,<0.18.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.16,<0.4.0)"
]

[tool.poetry]
packages = [{include = "content_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
